finally fix mobile round move list overflow
Put clocks and players in the same grid cell.
This allows having a single cell column, instead of
columns: auto min-content;
This is required to display the overflowable horizontal move list,
so that it can be contain within the grid parent.

--- a/ui/round/css/_moves.scss
+++ b/ui/round/css/_moves.scss
@@ -95,6 +95,7 @@
     }
   }
   @include breakpoint($mq-col1) {
+    overflow-x: scroll;
     $moves-height: 2.5em;
     .moves {
       flex: 0 0 $moves-height;
